# mcp-learning

./: .gitignore  README.md
basic-math-mcp-local-server/: main.py  pyproject.toml
build-mcp-client/: client1.py  main.py  pyproject.toml
build_remote_mcp_server_test/: main.py  pyproject.toml  test1.py  test2.py
expense-tracker-fast-api/: .gitignore  README.md  main.py  pyproject.toml  server.py
expense-tracker-fast-api/tests/: test_api.py
expense-tracker-mcp-server/: main.py  test.py
notes/: How to Build Local MCP Servers.docx
