[project]
name = "expense-tracker-fast-api"
version = "0.1.0"
description = "Expense tracker REST API built with FastAPI, Pydantic, and SQLite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "fastmcp>=3.4.2",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
